# rust-backend-diesel-actix-postgres

./: .gitignore  Cargo.toml  README.md  db.sql
migrations/2023-01-31-091948_create_users/: up.sql
migrations/2023-01-31-135450_create_users/: up.sql
migrations/2023-01-31-135518_create_collections/: down.sql  up.sql
migrations/2023-01-31-135548_create_trades/: down.sql  up.sql
migrations/2023-01-31-135622_create_orders/: down.sql  up.sql
migrations/2023-01-31-154254_create_database/: up.sql
migrations/2023-01-31-172513_create_database_tables/: down.sql  up.sql
migrations/2023-02-01-151545_create_tables/: down.sql  up.sql
migrations/2023-02-01-155806_create_tables/: down.sql  up.sql
ref/migrations/2023-01-31-091948_create_users/: down.sql  up.sql
ref/migrations/2023-01-31-091954_create_articles/: down.sql  up.sql
src/: actors.rs  db_models.rs  db_utils.rs  insertables.rs  main.rs  messages.rs  schema.rs  services.rs
